welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:18: error: Boolean does not take parameters
		return vuBiscuit()
                                ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
	for (n <-1 to 6)
               ^